==> KitSprout/MicroMultimeter/Software/uM_ModuleSTD_OLED-WF/Program/modules/module_ssd1331.c <==
#include "drivers\stm32f3_system.h"
#include "drivers\stm32f3_spi.h"
#include "algorithms\algorithm_string.h"
#include "module_ssd1331.h"
#define OLED_SPIx                   SPI3
#define OLED_SPI_CLK_ENABLE()       RCC_APB1PeriphClockCmd(RCC_APB1Periph_SPI3, ENABLE)
#define OLED_DC_PIN                 GPIO_Pin_4
#define OLED_DC_GPIO_PORT           GPIOB
#define OLED_DC_GPIO_CLK_ENABLE()   RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB, ENABLE)
#define OLED_DC_H()                 __GPIO_SET(OLED_DC_GPIO_PORT, OLED_DC_PIN)
#define OLED_DC_L()                 __GPIO_RST(OLED_DC_GPIO_PORT, OLED_DC_PIN)
#define OLED_RST_PIN                GPIO_Pin_6
#define OLED_RST_GPIO_PORT          GPIOB
#define OLED_RST_GPIO_CLK_ENABLE()  RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB, ENABLE)
#define OLED_RST_H()                __GPIO_SET(OLED_RST_GPIO_PORT, OLED_RST_PIN)
#define OLED_RST_L()                __GPIO_RST(OLED_RST_GPIO_PORT, OLED_RST_PIN)
#define OLED_CST_PIN                GPIO_Pin_15
#define OLED_CST_GPIO_PORT          GPIOA
#define OLED_CST_GPIO_CLK_ENABLE()  RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOA, ENABLE)
#define OLED_CST_H()                __GPIO_SET(OLED_CST_GPIO_PORT, OLED_CST_PIN)
#define OLED_CST_L()                __GPIO_RST(OLED_CST_GPIO_PORT, OLED_CST_PIN)
#define OLED_SCK_PIN                GPIO_Pin_3
#define OLED_SCK_GPIO_PORT          GPIOB
#define OLED_SCK_GPIO_CLK_ENABLE()  RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB, ENABLE)
#define OLED_SCK_AF                 GPIO_AF_6

void SSD1331_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;
  SPI_InitTypeDef SPI_InitStruct;

  /* SPI Clk ******************************************************************/
  OLED_SPI_CLK_ENABLE();
  OLED_DC_GPIO_CLK_ENABLE();
  OLED_RST_GPIO_CLK_ENABLE();
  OLED_CST_GPIO_CLK_ENABLE();
  OLED_SCK_GPIO_CLK_ENABLE();
  OLED_SDI_GPIO_CLK_ENABLE();

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.GPIO_Mode  = GPIO_Mode_OUT;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd  = GPIO_PuPd_UP;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;

  GPIO_InitStruct.GPIO_Pin   = OLED_CST_PIN;
  GPIO_Init(OLED_CST_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.GPIO_Pin   = OLED_DC_PIN;
  GPIO_Init(OLED_DC_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.GPIO_Pin   = OLED_RST_PIN;
  GPIO_Init(OLED_RST_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.GPIO_Mode  = GPIO_Mode_AF;
  GPIO_InitStruct.GPIO_OType = GPIO_OType_PP;
  GPIO_InitStruct.GPIO_PuPd  = GPIO_PuPd_UP;
  GPIO_InitStruct.GPIO_Speed = GPIO_Speed_50MHz;

  GPIO_InitStruct.GPIO_Pin   = OLED_SCK_PIN;
  GPIO_Init(OLED_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.GPIO_Pin   = OLED_SDI_PIN;
  GPIO_Init(OLED_SDI_GPIO_PORT, &GPIO_InitStruct);

  GPIO_PinAFConfig(OLED_SCK_GPIO_PORT, OLED_SCK_SOURCE, OLED_SCK_AF);
  GPIO_PinAFConfig(OLED_SDI_GPIO_PORT, OLED_SDI_SOURCE, OLED_SDI_AF);  

  OLED_CST_H();  // low enable

  /* SPI Init ****************************************************************/
  SPI_InitStruct.SPI_Mode              = SPI_Mode_Master;
  SPI_InitStruct.SPI_Direction         = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStruct.SPI_DataSize          = SPI_DataSize_8b;
  SPI_InitStruct.SPI_CPOL              = SPI_CPOL_High;
  SPI_InitStruct.SPI_CPHA              = SPI_CPHA_2Edge;
  SPI_InitStruct.SPI_NSS               = SPI_NSS_Soft;
  SPI_InitStruct.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2;
  SPI_InitStruct.SPI_FirstBit          = SPI_FirstBit_MSB;
  SPI_InitStruct.SPI_CRCPolynomial     = 7;
  SPI_Init(OLED_SPIx, &SPI_InitStruct);

  SPI_RxFIFOThresholdConfig(OLED_SPIx, SPI_RxFIFOThreshold_QF);
  SPI_Cmd(OLED_SPIx, ENABLE); 
}
