==> KitSprout/MicroMultimeter/Software/uM_ModuleHAL_OLED-WF/Program/modules/module_ssd1331.c <==
#include "drivers\stm32f3_system.h"
#include "drivers\stm32f3_spi.h"
#include "algorithms\algorithm_string.h"
#include "module_ssd1331.h"
#define OLED_SPIx                   SPI3
#define OLED_CLK_ENABLE()           __HAL_RCC_SPI3_CLK_ENABLE()
#define OLED_DC_PIN                 GPIO_PIN_4
#define OLED_DC_GPIO_PORT           GPIOB
#define OLED_DC_GPIO_CLK_ENABLE()   __HAL_RCC_GPIOB_CLK_ENABLE()
#define OLED_DC_H()                 __GPIO_SET(OLED_DC_GPIO_PORT, OLED_DC_PIN)
#define OLED_DC_L()                 __GPIO_RST(OLED_DC_GPIO_PORT, OLED_DC_PIN)
#define OLED_RST_PIN                GPIO_PIN_6
#define OLED_RST_GPIO_PORT          GPIOB
#define OLED_RST_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOB_CLK_ENABLE()
#define OLED_RST_H()                __GPIO_SET(OLED_RST_GPIO_PORT, OLED_RST_PIN)
#define OLED_RST_L()                __GPIO_RST(OLED_RST_GPIO_PORT, OLED_RST_PIN)
#define OLED_CST_PIN                GPIO_PIN_15
#define OLED_CST_GPIO_PORT          GPIOA
#define OLED_CST_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOA_CLK_ENABLE()
#define OLED_CST_H()                __GPIO_SET(OLED_CST_GPIO_PORT, OLED_CST_PIN)
#define OLED_CST_L()                __GPIO_RST(OLED_CST_GPIO_PORT, OLED_CST_PIN)
#define OLED_SCK_PIN                GPIO_PIN_3
#define OLED_SCK_GPIO_PORT          GPIOB
#define OLED_SCK_GPIO_CLK_ENABLE()  __HAL_RCC_GPIOB_CLK_ENABLE()
#define OLED_SCK_AF                 GPIO_AF6_SPI3
#define OLED_SDI_PIN                GPIO_PIN_5
#define OLED_SDI_GPIO_PORT          GPIOB

void SSD1331_Config( void )
{
  GPIO_InitTypeDef GPIO_InitStruct;
  SPI_HandleTypeDef SPI_HandleStruct;

  /* SPI Clk ******************************************************************/
  OLED_CLK_ENABLE();
  OLED_DC_GPIO_CLK_ENABLE();
  OLED_RST_GPIO_CLK_ENABLE();
  OLED_CST_GPIO_CLK_ENABLE();
  OLED_SCK_GPIO_CLK_ENABLE();
  OLED_SDI_GPIO_CLK_ENABLE();

  /* SPI Pin ******************************************************************/
  GPIO_InitStruct.Mode      = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull      = GPIO_PULLUP;
  GPIO_InitStruct.Speed     = GPIO_SPEED_HIGH;

  GPIO_InitStruct.Pin       = OLED_CST_PIN;
  HAL_GPIO_Init(OLED_CST_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = OLED_DC_PIN;
  HAL_GPIO_Init(OLED_DC_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = OLED_RST_PIN;
  HAL_GPIO_Init(OLED_RST_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Mode      = GPIO_MODE_AF_PP;

  GPIO_InitStruct.Pin       = OLED_SCK_PIN;
  GPIO_InitStruct.Alternate = OLED_SCK_AF;
  HAL_GPIO_Init(OLED_SCK_GPIO_PORT, &GPIO_InitStruct);

  GPIO_InitStruct.Pin       = OLED_SDI_PIN;
  GPIO_InitStruct.Alternate = OLED_SDI_AF;
  HAL_GPIO_Init(OLED_SDI_GPIO_PORT, &GPIO_InitStruct);

  OLED_CST_H();  // low enable

  /* SPI Init ****************************************************************/
  SPI_HandleStruct.Instance               = OLED_SPIx;
  SPI_HandleStruct.Init.Mode              = SPI_MODE_MASTER;
  SPI_HandleStruct.Init.Direction         = SPI_DIRECTION_2LINES;
  SPI_HandleStruct.Init.DataSize          = SPI_DATASIZE_8BIT;
  SPI_HandleStruct.Init.CLKPolarity       = SPI_POLARITY_HIGH;
  SPI_HandleStruct.Init.CLKPhase          = SPI_PHASE_2EDGE;
  SPI_HandleStruct.Init.NSS               = SPI_NSS_SOFT;
  SPI_HandleStruct.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_2;
  SPI_HandleStruct.Init.FirstBit          = SPI_FIRSTBIT_MSB;
  SPI_HandleStruct.Init.TIMode            = SPI_TIMODE_DISABLE;
  SPI_HandleStruct.Init.CRCCalculation    = SPI_CRCCALCULATION_ENABLE;
  SPI_HandleStruct.Init.CRCPolynomial     = 7;
  HAL_SPI_Init(&SPI_HandleStruct);

  __HAL_SPI_ENABLE(&SPI_HandleStruct);
}
